--- a/exdata-015/week1.tex
+++ b/exdata-015/week1.tex
@@ -1,10 +1,4 @@
-\include{exdata-014}
-\title{Week 1 Lecture Notes}
-\author{}
-\date{4 May 2015 -- 8 May 2015}
-
-\begin{document}
-\maketitle
+\chapter*{Week 1 Lecture Notes}
 
 \section{Principles of Analytic Graphics}
 Cribbed from ``Beautiful Evidence'' by Edward Tufte:
@@ -59,9 +53,3 @@ Sometimes it's awkward to specify an entire plot in a single call. Annotation is
 
 \subsection*{The \code{ggplot2} System}
 Splits the difference between base and lattice plots. It automatically deals with spacing, text, titles, but also allows you to annotate by ``adding'' to a plot. It has a superficial similarity to lattice but generally it's more intuitive to use. It has many defaults, but you can customize as much as you wish.
-
-
-
-\end{document}
-% Good job everybody
-
