--- a/exdata-015/exdata-015.tex
+++ b/exdata-015/exdata-015.tex
@@ -1,5 +1,5 @@
 \RequirePackage[orthodox]{nag}
-\documentclass[11pt]{book}
+\documentclass[11pt]{report}
 
 
 \usepackage{amsmath}
@@ -13,6 +13,8 @@
 
 \usepackage{microtype}
 
+\setcounter{secnumdepth}{0}
+
 %\usepackage{fancyhdr}
 
 %% DOCUMENT PARAMETERS
@@ -21,7 +23,7 @@
 %\setlength{\headheight}{15.2pt}
 %\setlength{\parskip}{6pt}
 %\setlength{\parindent}{0pt}
-
+%
 %\setlength{\topmargin}{0truein} \setlength{\headheight}{.25truein}
 %\setlength{\headsep}{.25truein} \setlength{\textheight}{9truein}
 %\setlength{\footskip}{.25truein}
@@ -29,23 +31,22 @@
 %\setlength{\evensidemargin}{0truein}
 %\setlength{\textwidth}{6.5truein} \setlength{\voffset}{-0.5truein}
 %\setlength{\hoffset}{0truein}
-
+%
 %\pagestyle{myheadings}
 %\thispagestyle{empty}
 
 \newcommand{\code}{\texttt}
 
-\title{Getting and Cleaning Data}
-\author{Coursera Data Specialization Track}
-\date{4 May 2015 -- 8 June 2015}
+\title{Exploratory Data Analysis}
+\author{Coursera Data Science Specialization}
+\date{4 May 2015 -- 7 June 2015}
 
-%\begin{titlepage}
-%\maketitle
-%\end{titlepage}
 \begin{document}
 \maketitle
+
 \include{week1}
 \include{week2}
 \include{week3}
 \include{week4}
+
 \end{document}
